added work pages

--- a/pages/index.html
+++ b/pages/index.html
@@ -22,7 +22,7 @@
                 <ul>
                     <li><a href="../pages/index.html"> HOME </a></li>
                     <li><a href="../pages/about.html"> ABOUT </a></li>
-                    <li><a href="#work"> WORKS </a></li>
+                    <li><a href="../pages/about.html"> WORKS </a></li>
                     <li><a href="../pages/cv.html"> CV/Résumé </a></li>
                 </ul>
             </div>
@@ -31,75 +31,79 @@
         <div class="text-box">
             <h1>Hi, My name is Yiyang Lu!</h1>
             <p> Welcome to my Website!</p>
-            <a href="" class="btn"> Learn more about me :)</a>
+            <a href="#work" class="btn"> Learn more about me :)</a>
         </div>
 
     </section>
     <!--Games-->
     <section class="games">
-        <h1><a id = "work"> My Works</a></h1>
-        <p> Finished projects.<br><br>
-            <a href="https://yiyang-lu.itch.io/">itch.o page</a>
-        </p>
-        <h2> Mini Games</h2>
+        <div class = "introductions">
+            <h1><a id = "work"> My Works</a></h1>
+            <p> Finished projects.<br><br>
+                <a href="https://yiyang-lu.itch.io/">itch.o page</a>
+            </p>
+        </div>
+
+        <h2> Projects</h2>
         <div class="row">
-            <div class="projects-col" style="background-image: url('../images/dogy_4.jpg')">
+            <div class="projects-col" style="background-image: url('../images/dogy_4.png')">
                 <div class="project-name">Dodgy Dice</div>
-                <div class="project-description">
-                    <a href="https://chonkershq.itch.io/dodgy-dice" class="btn_2"> PLAY NOW</a>
+                <a href="https://chonkershq.itch.io/dodgy-dice"><div class="project-description">
                     <p><br>Dodgy Dice is a top down, vampire-survivor-like bullet hell where the character is a multi sided die.
                     Each time a die is rolled, a number is generated and used to fuel various behaviors of the game.</p>
-                </div>
+                </div></a>
+                <!-- <a href="https://chonkershq.itch.io/dodgy-dice" class="btn_2"> Learn More</a> -->
             </div>
             <div class="projects-col" style="background-image: url('../images/body.gif')">
                 <div class="project-name">Where is My Body</div>
-                <div class="project-description">
-                    <a href="https://chonkershq.itch.io/dodgy-dice" class="btn_2"> PLAY NOW</a>
+                <a href="https://chonkershq.itch.io/dodgy-dice"><div class="project-description">
                     <p><br>Dodgy Dice is a top down, vampire-survivor-like bullet hell where the character is a multi sided die.
                     Each time a die is rolled, a number is generated and used to fuel various behaviors of the game.</p>
-                </div>
+                </div></a>
             </div>
             <div class="projects-col" style="background-image: url('../images/Dreamchaser.png')">
                 <div class="project-name">DreamChaser</div>
-                <div class="project-description">
-                    <a href="https://chonkershq.itch.io/dodgy-dice" class="btn_2"> PLAY NOW</a>
+                <a href="https://chonkershq.itch.io/dodgy-dice"><div class="project-description">
                     <p><br>Dodgy Dice is a top down, vampire-survivor-like bullet hell where the character is a multi sided die.
                     Each time a die is rolled, a number is generated and used to fuel various behaviors of the game.</p>
-                </div>
+                </div></a>
             </div>
             <div class="projects-col" style="background-image: url('../images/king.png')">
                 <div class="project-name">The King's Quisine</div>
-                <div class="project-description">
-                    <a href="https://chonkershq.itch.io/dodgy-dice" class="btn_2"> PLAY NOW</a>
+                <a href="https://chonkershq.itch.io/dodgy-dice"><div class="project-description">
                     <p><br>Dodgy Dice is a top down, vampire-survivor-like bullet hell where the character is a multi sided die.
                     Each time a die is rolled, a number is generated and used to fuel various behaviors of the game.</p>
-                </div>
+                </div></a>
             </div>
             <div class="projects-col" style="background-image: url('../images/whale.jpg')">
                 <div class="project-name">Killer Whale</div>
-                <div class="project-description">
-                    <a href="https://chonkershq.itch.io/dodgy-dice" class="btn_2"> PLAY NOW</a>
+                <a href="https://chonkershq.itch.io/dodgy-dice"><div class="project-description">
                     <p><br>Dodgy Dice is a top down, vampire-survivor-like bullet hell where the character is a multi sided die.
                     Each time a die is rolled, a number is generated and used to fuel various behaviors of the game.</p>
-                </div>
-        </div>
+                </div></a>
+            </div>
+            <div class="projects-col" style="background-image: url('../images/hex.png')">
+                <div class="project-name">Hex Harmonia</div>
+                <a href="https://chonkershq.itch.io/dodgy-dice"><div class="project-description">
+                    <p><br>Dodgy Dice is a top down, vampire-survivor-like bullet hell where the character is a multi sided die.
+                    Each time a die is rolled, a number is generated and used to fuel various behaviors of the game.</p>
+                </div></a>
+            </div>
         <h2>Designs</h2>
         <div class="row">
             <div class="projects-col" style="background-image: url('../images/hat.png')">
-                <h3>Ace Attorney Game Posters</h3>
-                <div class="project-description">
-                    <a href="https://chonkershq.itch.io/dodgy-dice" class="btn_2"> PLAY NOW</a>
+                <div class="project-name">Ace Attorney Game Poster</div>
+                <a href="https://chonkershq.itch.io/dodgy-dice"><div class="project-description">
                     <p><br>Dodgy Dice is a top down, vampire-survivor-like bullet hell where the character is a multi sided die.
                     Each time a die is rolled, a number is generated and used to fuel various behaviors of the game.</p>
-                </div>
+                </div></a>
             </div>
             <div class="projects-col" style="background-image: url('../images/Aboutart 1.png')">
-                <h3>About Art Hi-Fi Prototype</h3>
-                <div class="project-description">
-                    <a href="https://chonkershq.itch.io/dodgy-dice" class="btn_2"> PLAY NOW</a>
+                <div class="project-name">Aboutart UI Design</div>
+                <a href="https://chonkershq.itch.io/dodgy-dice"><div class="project-description">
                     <p><br>Dodgy Dice is a top down, vampire-survivor-like bullet hell where the character is a multi sided die.
                     Each time a die is rolled, a number is generated and used to fuel various behaviors of the game.</p>
-                </div>
+                </div></a>
             </div>
         </div>
 
