added several contents

--- a/pages/works.html
+++ b/pages/works.html
@@ -27,16 +27,36 @@
     </section>
 
     <section class="projects">
+        <h4> Game Projects</h4>
+        <div class="work-description">
+            <h1>Hex Harmonia<a href="https://gun-jumpers.itch.io/hex-harmonia" class="btn_2"> Play Now</a>
+                <i class="fa fa-github" onclick ="location.href = 'https://github.com/GunJumpers/JamOne'"style="cursor:pointer" title="source code"></i>
+            </h1> 
+            <p> October 2022</p>
+            <li>CMPM 170: Game Design Studio Jam One project </li>
+            <h3>HexHarmonia - Full Walkthrough</h3>
+            <iframe width="960" height="540" src="https://www.youtube.com/embed/l4d3-rslow8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <h2>My contribution to <b>Hex Harmonia</b></h2>
+            <li>Brainstormed, desigend and finished the whole game within 48 hours with another 10 group memebers.</li>
+            <li>I was responsible for dice randomnizing, dice spawning, and UI/Menu code.</li>
+            <li>I worked closely as programmers iterating through gameplay features and build mechanics.</li>
+            <ul><div class="screenshots">
+                <img src="../images/hsc1.jpg">
+                <img src="../images/hsc2.jpg">
+                <img src="../images/hsc3.jpg">
+                <img src="../images/hsc4.png">
+            </div></ul>
+        </div>
         <div class="work-description">
             <h1>Dodgy Dice
                 <a href="https://chonkershq.itch.io/dodgy-dice" class="btn_2"> Play Now</a>
                 <i class="fa fa-github" onclick ="location.href = 'https://github.com/metalgaiden/DodgeRoll'"style="cursor:pointer" title="source code"></i>
             </h1> 
+            <p> July 2022</p>
             <li>GMTK 2O22 GAME JAM projects </li>
-            <p>Dodgy Dice - Full Walkthrough</p>
-            <br><iframe width="960" height="540" src="https://www.youtube.com/embed/eswdmvGHW6s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></br>
-            
-            <h2><br>My contribution to <b>Dodgy Dice</b></br></h2>
+            <h3>Dodgy Dice - Full Walkthrough</h3>
+            <iframe width="960" height="540" src="https://www.youtube.com/embed/eswdmvGHW6s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <h2>My contribution to <b>Dodgy Dice</b></h2>
             <li>Brainstormed, desigend and finished the whole game within 48 hours with another 10 group memebers.</li>
             <li>I was responsible for dice randomnizing, dice spawning, and UI/Menu code.</li>
             <li>I worked closely as programmers iterating through gameplay features and build mechanics.</li>
@@ -49,11 +69,80 @@
             </div></ul>
         </div>
         <div class="work-description">
-            <h1>Where is My Body</h1>
+            <h1>Where is My Body?
+                <a href="https://yiyang-lu.itch.io/where-is-my-body" class="btn_2"> Play Now</a>
+                <i class="fa fa-github" onclick ="location.href = 'https://github.com/lyiyang0702/WhereIsMyBody'"style="cursor:pointer" title="source code"></i>
+            </h1> 
+            <p> March 2022 ~ April 2022</p>
+            <li>CMPM 120: Game Development Experience project </li>
+            <h3>Where is My Body? - Full Walkthrough</h3>
+            <iframe width="960" height="540" src="https://www.youtube.com/embed/yk177VapCtM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <h2>My contribution to <b>Where is My Body</b></h2>
+            <li>Brainstormed, desigend and finished the whole game within 48 hours with another 10 group memebers.</li>
+            <li>I was responsible for dice randomnizing, dice spawning, and UI/Menu code.</li>
+            <li>I worked closely as programmers iterating through gameplay features and build mechanics.</li>
+            <ul><div class="screenshots">
+                <img src="../images/wbsc_1.png">
+                <img src="../images/wbsc_2.png">
+                <img src="../images/wbsc_3.png">
+            </div></ul>
         </div>
         <div class="work-description">
-            <h1>DreamChaser</h1>
+            <h1>DreamChaser<a href="https://twixyuu.itch.io/dreamchaser" class="btn_2"> Play Now</a>
+                <i class="fa fa-github" onclick ="location.href = 'https://github.com/lyiyang0702/Dreamchaser'"style="cursor:pointer" title="source code"></i>
+            </h1> 
+            <p> April 2022 ~ June 2022</p>
+            <li>CMPM 120: Game Development Experience project </li>
+            <h3>DreamChaser - Full Walkthrough</h3>
+            <iframe width="960" height="540" src="https://www.youtube.com/embed/yk177VapCtM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <h2>My contribution to <b>DreamChaser</b></h2>
+            <li>Brainstormed, desigend and finished the whole game within 48 hours with another 10 group memebers.</li>
+            <li>I was responsible for dice randomnizing, dice spawning, and UI/Menu code.</li>
+            <li>I worked closely as programmers iterating through gameplay features and build mechanics.</li>
+            <ul><div class="screenshots">
+                <img src="../images/dcsc1.png">
+                <img src="../images/dcsc2.png">
+                <img src="../images/dcsc3.png">
+            </div></ul>
         </div>
+
+        <div class="work-description">
+            <h1>Ace Attorney Shooting<a href="https://yiyang-lu.itch.io/ace-attorney-shooting" class="btn_2"> Play Now</a>
+                <i class="fa fa-github" onclick ="location.href = 'https://github.com/lyiyang0702/RocketPatrol_Mod'"style="cursor:pointer" title="source code"></i>
+            </h1> 
+            <p> April 2022 ~ June 2022</p>
+            <li>CMPM 120: Game Development Experience project </li>
+            <h3>DreamChaser - Full Walkthrough</h3>
+            <iframe width="960" height="540" src="https://www.youtube.com/embed/yk177VapCtM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <h2>My contribution to <b>Killer Whale</b></h2>
+            <li>Brainstormed, desigend and finished the whole game within 48 hours with another 10 group memebers.</li>
+            <li>I was responsible for dice randomnizing, dice spawning, and UI/Menu code.</li>
+            <li>I worked closely as programmers iterating through gameplay features and build mechanics.</li>
+            <ul><div class="screenshots">
+                <img src="../images/dcsc1.png">
+                <img src="../images/dcsc2.png">
+                <img src="../images/dcsc3.png">
+            </div></ul>
+        </div>
+        <div class="work-description">
+            <h1>DreamChaser<a href="https://twixyuu.itch.io/dreamchaser" class="btn_2"> Play Now</a>
+                <i class="fa fa-github" onclick ="location.href = 'https://github.com/lyiyang0702/Dreamchaser'"style="cursor:pointer" title="source code"></i>
+            </h1> 
+            <p> April 2022 ~ June 2022</p>
+            <li>CMPM 120: Game Development Experience project </li>
+            <h3>DreamChaser - Full Walkthrough</h3>
+            <iframe width="960" height="540" src="https://www.youtube.com/embed/yk177VapCtM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <h2>My contribution to <b>The King's Quisine</b></h2>
+            <li>Brainstormed, desigend and finished the whole game within 48 hours with another 10 group memebers.</li>
+            <li>I was responsible for dice randomnizing, dice spawning, and UI/Menu code.</li>
+            <li>I worked closely as programmers iterating through gameplay features and build mechanics.</li>
+            <ul><div class="screenshots">
+                <img src="../images/dcsc1.png">
+                <img src="../images/dcsc2.png">
+                <img src="../images/dcsc3.png">
+            </div></ul>
+        </div>
+        <h4>Designs</h4>
     </section>
 </body>
 </html>
