--- a/pages/index.html
+++ b/pages/index.html
@@ -22,7 +22,7 @@
                 <ul>
                     <li><a href="../pages/index.html"> HOME </a></li>
                     <li><a href="../pages/about.html"> ABOUT </a></li>
-                    <li><a href="../pages/about.html"> WORKS </a></li>
+                    <li><a href="../pages/works.html"> WORKS </a></li>
                     <li><a href="../pages/cv.html"> CV/Résumé </a></li>
                 </ul>
             </div>
@@ -52,7 +52,7 @@
                     <p><br>Dodgy Dice is a top down, vampire-survivor-like bullet hell where the character is a multi sided die.
                     Each time a die is rolled, a number is generated and used to fuel various behaviors of the game.</p>
                 </div></a>
-                <!-- <a href="https://chonkershq.itch.io/dodgy-dice" class="btn_2"> Learn More</a> -->
+                
             </div>
             <div class="projects-col" style="background-image: url('../images/body.gif')">
                 <div class="project-name">Where is My Body</div>
