--- a/pages/works.html
+++ b/pages/works.html
@@ -29,7 +29,8 @@
     <section class="projects">
         <h4> Game Projects</h4>
         <div class="work-description">
-            <h1>Hex Harmonia<a href="https://gun-jumpers.itch.io/hex-harmonia" class="btn_2"> Play Now</a>
+            <h1>Hex Harmonia
+                <a href="https://gun-jumpers.itch.io/hex-harmonia" class="btn_2"> Play Now</a>
                 <i class="fa fa-github" onclick ="location.href = 'https://github.com/GunJumpers/JamOne'"style="cursor:pointer" title="source code"></i>
             </h1> 
             <p> October 2022</p>
@@ -47,6 +48,28 @@
                 <img src="../images/hsc4.png">
             </div></ul>
         </div>
+
+        <div class="work-description">
+            <h1>Turtles All The Way Down
+                <a href="https://niccoloabate.itch.io/turtles-all-the-way-down" class="btn_2"> Play Now</a>
+                <i class="fa fa-github" onclick ="location.href = 'https://github.com/NikThomas9/CMPM170-Jam-2'"style="cursor:pointer" title="source code"></i>
+            </h1> 
+            <p> Novemeber 2022</p>
+            <li>CMPM 170: Game Design Studio Jam Two project </li>
+            <h3>Turtles All The Way Down - Full Walkthrough</h3>
+            <iframe width="960" height="540" src="https://www.youtube.com/embed/l4d3-rslow8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <h2>My contribution to <b>Hex Harmonia</b></h2>
+            <li>Brainstormed, desigend and finished the whole game within 48 hours with another 10 group memebers.</li>
+            <li>I was responsible for dice randomnizing, dice spawning, and UI/Menu code.</li>
+            <li>I worked closely as programmers iterating through gameplay features and build mechanics.</li>
+            <ul><div class="screenshots">
+                <img src="../images/hsc1.jpg">
+                <img src="../images/hsc2.jpg">
+                <img src="../images/hsc3.jpg">
+                <img src="../images/hsc4.png">
+            </div></ul>
+        </div>
+
         <div class="work-description">
             <h1>Dodgy Dice
                 <a href="https://chonkershq.itch.io/dodgy-dice" class="btn_2"> Play Now</a>
@@ -110,29 +133,28 @@
             <h1>Ace Attorney Shooting<a href="https://yiyang-lu.itch.io/ace-attorney-shooting" class="btn_2"> Play Now</a>
                 <i class="fa fa-github" onclick ="location.href = 'https://github.com/lyiyang0702/RocketPatrol_Mod'"style="cursor:pointer" title="source code"></i>
             </h1> 
-            <p> April 2022 ~ June 2022</p>
-            <li>CMPM 120: Game Development Experience project </li>
-            <h3>DreamChaser - Full Walkthrough</h3>
+            <p> April 2022</p>
+            <li>CMPM 120: Game Development Experience project</li>
+            <h3>Ace Attorney Shooting - Full Walkthrough</h3>
             <iframe width="960" height="540" src="https://www.youtube.com/embed/yk177VapCtM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <h2>My contribution to <b>Killer Whale</b></h2>
+            <h2>My contribution to <b>Ace Attorney Shooting</b></h2>
             <li>Brainstormed, desigend and finished the whole game within 48 hours with another 10 group memebers.</li>
             <li>I was responsible for dice randomnizing, dice spawning, and UI/Menu code.</li>
             <li>I worked closely as programmers iterating through gameplay features and build mechanics.</li>
             <ul><div class="screenshots">
-                <img src="../images/dcsc1.png">
-                <img src="../images/dcsc2.png">
-                <img src="../images/dcsc3.png">
+                <img src="../images/acs4.png">
+                <img src="../images/acs3.png">
+                <img src="../images/acs2.png">
+                <img src="../images/acs1.png">
             </div></ul>
         </div>
         <div class="work-description">
-            <h1>DreamChaser<a href="https://twixyuu.itch.io/dreamchaser" class="btn_2"> Play Now</a>
-                <i class="fa fa-github" onclick ="location.href = 'https://github.com/lyiyang0702/Dreamchaser'"style="cursor:pointer" title="source code"></i>
-            </h1> 
-            <p> April 2022 ~ June 2022</p>
-            <li>CMPM 120: Game Development Experience project </li>
-            <h3>DreamChaser - Full Walkthrough</h3>
+            <h1>Killer Whale <a href="https://yiyang-lu.itch.io/twine-game-killer-whale" class="btn_2"> Play Now</a></h1> 
+            <p> April 2021 ~ May 2021</p>
+            <li>CMPM 80K: Foundations of Video Game Design project </li>
+            <h3>Killer Whale - Full Walkthrough</h3>
             <iframe width="960" height="540" src="https://www.youtube.com/embed/yk177VapCtM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <h2>My contribution to <b>The King's Quisine</b></h2>
+            <h2>Individual Project</h2>
             <li>Brainstormed, desigend and finished the whole game within 48 hours with another 10 group memebers.</li>
             <li>I was responsible for dice randomnizing, dice spawning, and UI/Menu code.</li>
             <li>I worked closely as programmers iterating through gameplay features and build mechanics.</li>
@@ -143,6 +165,40 @@
             </div></ul>
         </div>
         <h4>Designs</h4>
+        <div class="work-description">
+            <h1>Ace Attorney Interactive Poster<a href="https://yiyang-lu.itch.io/ace-attorney-game-poster" class="btn_2"> Play Now</a></h1> 
+            <p> September 2021 ~ December 2021</p>
+            <li>ARTG 80I: Human-Centerd Design Research project</li>
+            <h3>About Art Overview</h3>
+            <iframe width="960" height="540" src="https://www.youtube.com/embed/yk177VapCtM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <h2>My contribution to <b>Ace Attorney Shooting</b></h2>
+            <li>Brainstormed, desigend and finished the whole game within 48 hours with another 10 group memebers.</li>
+            <li>I was responsible for dice randomnizing, dice spawning, and UI/Menu code.</li>
+            <li>I worked closely as programmers iterating through gameplay features and build mechanics.</li>
+            <ul><div class="screenshots">
+                <img src="../images/dcsc1.png">
+                <img src="../images/dcsc2.png">
+                <img src="../images/dcsc3.png">
+            </div></ul>
+        </div>
+        <div class="work-description">
+            <h1>About Art UI Design<a href="https://yiyang-lu.itch.io/ace-attorney-shooting" class="btn_2"> Play Now</a>
+                <i class="fa fa-github" onclick ="location.href = 'https://github.com/lyiyang0702/RocketPatrol_Mod'"style="cursor:pointer" title="source code"></i>
+            </h1> 
+            <p> September 2021 ~ December 2021</p>
+            <li>CMPM 178: Human-Centerd Design Research project</li>
+            <h3>About Art Overview</h3>
+            <iframe width="960" height="540" src="https://www.youtube.com/embed/yk177VapCtM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <h2>My contribution to <b>Ace Attorney Shooting</b></h2>
+            <li>Brainstormed, desigend and finished the whole game within 48 hours with another 10 group memebers.</li>
+            <li>I was responsible for dice randomnizing, dice spawning, and UI/Menu code.</li>
+            <li>I worked closely as programmers iterating through gameplay features and build mechanics.</li>
+            <ul><div class="screenshots">
+                <img src="../images/dcsc1.png">
+                <img src="../images/dcsc2.png">
+                <img src="../images/dcsc3.png">
+            </div></ul>
+        </div>
     </section>
 </body>
 </html>
